update gallery with animation enhancements and layout bugs fixes

--- a/app/styles/characterization.styl
+++ b/app/styles/characterization.styl
@@ -29,6 +29,9 @@ $MIN_SIDEBAR_WIDTH = 450px
 	
 	transition width 400ms ease-in-out, min-width 400ms ease-in-out
 	
+.characterization
+	overflow-x hidden
+	
 .characterization-header
 	display flex
 	align-items center
