--- a/app/styles/chartlegend.styl
+++ b/app/styles/chartlegend.styl
@@ -6,7 +6,7 @@ chartlegend
 	flex-shrink 0
 		
 	width 100%
-	min-height 65px
+	min-height 75px
 	
 	max-height 300px
 	overflow scroll
