--- a/app/styles/d3.styl
+++ b/app/styles/d3.styl
@@ -155,6 +155,7 @@ path
 	border-radius 5px
 	pointer-events none
 	box-shadow rgba(0,0,0,0.075) 0px 0px 50px
+	transition left 100ms ease-in-out, top 100ms ease-in-out
 	
 .sidebar .tooltip h3
 	text-align left
